<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/telegram"
            android:icon="@drawable/ic_telegram"
            android:title="@string/telegram_channel" />
        <item
            android:id="@+id/call"
            android:icon="@drawable/ic_headphones"
            android:title="@string/connect_with_us" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_star"
            android:title="@string/rate" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />
    </group>
</menu>