<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/uzmobile_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <androidx.cardview.widget.CardView
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:id="@+id/back"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/card_background_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">
        <androidx.cardview.widget.CardView
            android:id="@+id/uzbek"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:layout_marginLeft="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_60sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/card_background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/uzbek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/russian"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_60sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/card_background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/russian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/latin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_60sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/card_background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:text="@string/latin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/splash_text_color"
                android:fontFamily="@font/rubik"
                android:layout_marginBottom="15dp"
                android:text="DM Mobile Group "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</LinearLayout>